--- a/PPTT/Pages/Index.cshtml
+++ b/PPTT/Pages/Index.cshtml
@@ -3,10 +3,15 @@
 @{
     ViewData["Title"] = "Home page";
 }
-<form method="get">
-    <a href="/PT/Create" class="submit">Subir Peticion de Trabajo</a>
-    <a href="/Vistas/IngresoPersonal" class="submit">Ingresar</a>
-</form>
+    
+    <form method="get">
+        <div class="card-container">    
+
+            <a asp-page="/PT/Create"><div class="card">Subir Peticion de Trabajo</div></a>
+            <a asp-page="/Vistas/IngresoPersonal"><div class="card">Ingresar</div></a>
+        </div>
+    </form>
+
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -15,11 +20,7 @@
         margin: 0;
         padding: 0;
         text-align: center;
-    }
-
-    .header {
-        padding: 20px;
-    }
+    }    
 
     .main-content {
         display: flex;
@@ -37,33 +38,7 @@
         border-radius: 8px;
         box-shadow: 0px 0px 10px rgba(0, 61, 107, 0.2);
         display: inline-block;
-    }
-
-    .submit {
-        background-color: #003d6b;
-        color: white;
-        padding: 15px 30px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 1.2em;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        margin: 10px;
-        transition: background-color 0.3s, transform 0.2s;
-        font-weight: bold;
-    }
-
-        .submit:hover {
-            background-color: #002e5d;
-            transform: scale(1.05);
-        }
-
-        .submit:active {
-            background-color: #001f3f;
-            transform: scale(1);
-        }
+    }    
 </style>
 
 
