--- a/PPTT/Pages/Vistas/IndexLogueado.cshtml
+++ b/PPTT/Pages/Vistas/IndexLogueado.cshtml
@@ -3,20 +3,11 @@
 @{
     ViewData["Title"] = "Cuartel General";
 }
-<body>
-    <header>
-        <div class="navbar">
-            <div class="navbar-logo">Pedidos - Cuartel General</div>                    
-            <div class="centered-button">
-                <form method="post" asp-page-handler="cerrar">
-                    <input type="submit" value="Cerrar Sesion" class="submit" />
-                </form>
-            </div>
-        </div>
-    </header>
+<body>    
     <div class="card-container">
         <a asp-page="/PT/Index"> <div class="card">Pedidos de Trabajo</div></a>
-        <div class="card">Modificar Usuario</div>
+        <a asp-page="/Administradores/Create"><div class="card">Alta de Usuario</div></a>
+        <a asp-page="/Administradores/Index"><div class="card">Listado de Usuarios</div></a>
         <div class="card">Baja de Usuario</div>
         <div class="card">Pedidos de Trabajo</div>
     </div>
@@ -24,8 +15,7 @@
 <footer>
     <p>Dirección de Informática - Departamento de Desarrollo y Mantenimiento de Sistemas</p>
 </footer>
-<style>
-    /* Reiniciar márgenes y paddings */
+<style>    
     * {
         margin: 0;
         padding: 0;
@@ -38,90 +28,7 @@
         flex-direction: column;
         min-height: 100vh;
         overflow-y: hidden;
-    }
-
-    .card-container {
-        display: flex;
-        gap: 20px;
-        flex-wrap: wrap;
-        justify-content: center;
-        padding: 40px 0;
-        flex-grow: 1;
-    }
-
-    .submit {
-        background-color: #e63946;
-        color: #f1faee;
-        border: none;
-        padding: 10px 20px;
-        font-size: 1em;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
-    }
-
-    .submit:hover {
-        background-color: #d62828; 
-        transform: scale(1.05); 
-        box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3); 
-    }
-
-    .card {
-        background-color: #1d3557;
-        color: #f1faee;
-        padding: 20px;
-        width: 150px;
-        height: 150px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        font-size: 1.1em;
-        border-radius: 8px;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-        transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .card-container a {
-        text-decoration: none;
-    }
-    .card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
-    }
-
-    header {        
-        background-color: #1d3557; /* Color de fondo */
-        color: #f1faee; /* Color del texto */
-        padding: 10px 0;
-        box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .navbar {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 0 20px;
-    }
-
-    .navbar-logo {
-        font-size: 1.5em;
-        font-weight: bold;
-    }
-
-    .logout-icon {
-        background-color: #e63946; /* Color del botón */
-        color: #f1faee;
-        padding: 8px 12px;
-        border-radius: 5px;
-        text-decoration: none;
-        transition: background-color 0.3s;
-    }
-
-    .logout-icon:hover {
-        background-color: #d62828; /* Color al pasar el cursor */
-    }
+    }    
 
     footer {        
         background-color: #1d3557; 
