--- a/PPTT/wwwroot/css/site.css
+++ b/PPTT/wwwroot/css/site.css
@@ -18,9 +18,93 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: #eeeeee;
+}
+.submit {
+    background-color: #f1faee;
+    color: #1d3557;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1em;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
 }
 
+    .submit:hover {
+        background-color: #d68888;
+        box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
+    }
+
+.card-container {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 40px 0;
+    flex-grow: 1;
+}
+
+
+.card {
+    background-color: #1d3557;
+    color: #f1faee;
+    padding: 20px;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 1.1em;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.card-container a {
+    text-decoration: none;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+}    
+
+header {
+    background-color: #1d3557; 
+    color: #f1faee; 
+    padding: 10px 0;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.navbar-logo {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.logout-icon {
+    background-color: #e63946; /* Color del botón */
+    color: #f1faee;
+    padding: 8px 12px;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s;
+}
+
+    .logout-icon:hover {
+        background-color: #d62828; /* Color al pasar el cursor */
+    }
 footer {
     background-color: #1d3557;
     color: #f1faee;
@@ -30,5 +114,31 @@ footer {
     position: fixed;
     width: 100%;
     bottom: 0;
+    height: 5vh;
 }
+
+.a-to-index {
+    text-decoration: none;
+    color: #f1faee;
+}
+
+    .a-to-index:hover {
+        color: inherit; 
+        animation: none;
+    }
+
+.titulo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 10px
+}
+
+    .titulo h3 {
+        margin: 0; /* Elimina el margen por defecto */
+    }
+
+    .titulo p {
+        margin: 0; /* Elimina el margen por defecto */
+    }
 
