--- a/PPTT/Pages/Administradores/Create.cshtml
+++ b/PPTT/Pages/Administradores/Create.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Admin.DNI" class="control-label"></label>
-                <input required asp-for="Admin.DNI" class="form-control" />
+                <input required asp-for="Admin.DNI" value="" class="form-control" />
                 <span asp-validation-for="Admin.DNI" class="text-danger"></span>
             </div>         
             <div class="form-group">
